--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.74.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "@react-navigation/stack": "^6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
