--- a/package.json
+++ b/package.json
@@ -14,16 +14,18 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6",
     "axios": "^1.10.0",
     "expo": "~51.0.21",
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "zustand": "^5.0.6",
-    "@react-navigation/stack": "^6"
+    "react-native-svg": "^15.12.0",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
