--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "expo-font": "~12.0.10",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.2.0",
     "zustand": "^5.0.6",
     "@react-native-async-storage/async-storage": "1.23.1"
   },
